test/grammar/schema/type_annotation/defaults/default_values_not_full_invalid_12/stderr.golden
error[E1001]: IllegalParameterError
 --> ${CWD}/main.k:1:25
  |
1 | schema A[a1 = 100, a2 = 200, a3]:
  |                         ^ non-default argument follows default argument
  |
note: A default argument
error[E1001]: IllegalParameterError
 --> ${CWD}/main.k:1:15
  |
1 | schema A[a1 = 100, a2 = 200, a3]:
  |               ^ non-default argument follows default argument
  |
note: A default argument
error[E2L23]: CompileError
 --> ${CWD}/main.k:7:5
  |
7 | a = A(a1=1,a2=2)
  |     ^ expected 1 positional argument, found 0
  |